--- a/Social-Manager.Web/Social-Manager.Web.csproj
+++ b/Social-Manager.Web/Social-Manager.Web.csproj
@@ -9,12 +9,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.3"/>
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="2.1.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Social-Manager.Abstraction\Social-Manager.Abstraction.csproj" />
+    <ProjectReference Include="..\Social-Manager.Abstraction\Social-Manager.Services.csproj" />
     <ProjectReference Include="..\Social-Manager.Core\Social-Manager.Core.csproj" />
     <ProjectReference Include="..\Social-Manager.Infrastructure\Social-Manager.Infrastructure.csproj" />
   </ItemGroup>
