--- a/Social-Manager.Web/appsettings.json
+++ b/Social-Manager.Web/appsettings.json
@@ -1,6 +1,9 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=SocialManager;Integrated Security=True"
+  "AzureAdB2C": {
+    "Instance": "https://login.microsoftonline.com",
+    "Tenant": "mysocialmanager.onmicrosoft.com",
+    "ClientId": "e9ba9099-6105-46c3-b2cb-35078d72becb",
+    "Policy": "B2C_1_SiUpIn"
   },
   "Logging": {
     "LogLevel": {
