--- a/Social-Manager.Web/Properties/launchSettings.json
+++ b/Social-Manager.Web/Properties/launchSettings.json
@@ -1,11 +1,11 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
+    "windowsAuthentication": false, 
+    "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:11227",
-      "sslPort": 44338
+      "applicationUrl": "http://localhost:54043",
+      "sslPort": 44349
     }
   },
   "profiles": {
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Social_Manager.Web": {
+    "Social_Manager.WEB": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
