--- a/Social-Manager.Web/Social-Manager.Web.csproj
+++ b/Social-Manager.Web/Social-Manager.Web.csproj
@@ -1,7 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>aspnet-Social_Manager.WEB-97956ABE-65A0-43E8-B729-19B870C10470</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,15 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="2.1.2" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Social-Manager.Abstraction\Social-Manager.Services.csproj" />
-    <ProjectReference Include="..\Social-Manager.Core\Social-Manager.Core.csproj" />
-    <ProjectReference Include="..\Social-Manager.Infrastructure\Social-Manager.Infrastructure.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureADB2C.UI" Version="2.1.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
 </Project>
