--- a/SocialManager.Angular/package.json
+++ b/SocialManager.Angular/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -22,8 +22,12 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@types/hellojs": "^1.16.1",
+    "adal-angular4": "^3.0.13",
     "adm-zip": "^0.4.11",
     "core-js": "^2.5.4",
+    "hellojs": "^2.0.0-4",
+    "microsoft-adal-angular6": "^1.0.0",
     "ng-click-outside": "^4.0.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
