--- a/Social-Manager.Core/Stream-G.Core.csproj
+++ b/Social-Manager.Core/Stream-G.Core.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>Social_Manager.Core</RootNamespace>
+    <RootNamespace>StreamG.Core</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Social-Manager.Abstraction\Social-Manager.Services.csproj" />
+    <ProjectReference Include="..\Social-Manager.Infrastructure\Stream-G.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
