--- a/Social-Manager.Infrastructure/Stream-G.Infrastructure.csproj
+++ b/Social-Manager.Infrastructure/Stream-G.Infrastructure.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>Social_Manager.Infrastructure</RootNamespace>
+    <RootNamespace>StreamG.Infrastructure</RootNamespace>
   </PropertyGroup>
 
 </Project>
