--- a/Social-Manager.WEB/Stream-G.WEB.csproj
+++ b/Social-Manager.WEB/Stream-G.WEB.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <UserSecretsId>aspnet-Social_Manager.WEB-97956ABE-65A0-43E8-B729-19B870C10470</UserSecretsId>
+    <RootNamespace>StreamG.WEB</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,10 +11,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureADB2C.UI" Version="2.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Social-Manager.Abstraction\Stream-G.Services.csproj" />
   </ItemGroup>
 
 </Project>
