--- a/Stream-G.DTO/Stream-G.DTO.csproj
+++ b/Stream-G.DTO/Stream-G.DTO.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>Social-Manager.Services</RootNamespace>
+    <RootNamespace>StreamG.DTO</RootNamespace>
   </PropertyGroup>
 
 </Project>
