Rename Project Name

--- a/Stream-G.WEB/Stream-G.WEB.csproj
+++ b/Stream-G.WEB/Stream-G.WEB.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Social-Manager.Abstraction\Stream-G.Services.csproj" />
+    <ProjectReference Include="..\Stream-G.Abstraction\Stream-G.Services.csproj" />
   </ItemGroup>
 
 </Project>
