--- a/Stream-G.Abstraction/Stream-G.Services.csproj
+++ b/Stream-G.Abstraction/Stream-G.Services.csproj
@@ -6,8 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="5.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\ConsoleApp1\TwitchApi\Twitch.API.csproj" />
     <ProjectReference Include="..\Stream-G.DTO\Stream-G.DTO.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 
 </Project>
