--- a/Stream-G.Angular/package.json
+++ b/Stream-G.Angular/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@aspnet/signalr": "^1.0.4",
     "@types/hellojs": "^1.16.1",
     "adal-angular4": "^3.0.13",
     "adm-zip": "^0.4.11",
