--- a/Stream-G.Infrastructure/Stream-G.Infrastructure.csproj
+++ b/Stream-G.Infrastructure/Stream-G.Infrastructure.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>StreamG.Infrastructure</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.4" />
+  </ItemGroup>
+
 </Project>
