--- a/Stream-G.WEB/Stream-G.WEB.csproj
+++ b/Stream-G.WEB/Stream-G.WEB.csproj
@@ -11,14 +11,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="5.1.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureADB2C.UI" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Stream-G.Abstraction\Stream-G.Services.csproj" />
+    <ProjectReference Include="..\Stream-G.Infrastructure\Stream-G.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
