--- a/Twitch/Twitch.Api.Interfaces/Twitch.Api.Abstraction.csproj
+++ b/Twitch/Twitch.Api.Interfaces/Twitch.Api.Abstraction.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ConsoleApp1\TwitchApi.Models\Twitch.API.Data.csproj" />
+    <ProjectReference Include="..\TwitchApi.Models\Twitch.API.Data.csproj" />
   </ItemGroup>
 
 </Project>
